--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,6 +21,14 @@
         {% endfor %}
       </div>
       
+      <div class="trigger">
+        {% for page in site.pages %}
+          {% if page.title %}
+          <a class="page-link" href="https://andrewyaspan-github-io-aycrazy.c9.io/index.html">Site</a>
+          {% endif %}
+        {% endfor %}
+      </div>
+      
     </nav>
 
   </div>
