--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
       </div>
       
       <div class="trigger">
-         <a class="page-link" href="https://andrewyaspan-github-io-aycrazy.c9.io/index.html">Site</a>
+         <a href="https://andrewyaspan-github-io-aycrazy.c9.io/index.html">Site</a>
       </div>
       
     </nav>
