--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
         {% endfor %}
       </div>
       
-      <div class="trigger">
+      <div>
          <a href="https://andrewyaspan-github-io-aycrazy.c9.io/index.html">Site</a>
       </div>
       
