--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
       </div>
       
       <div>
-         <a href="https://andrewyaspan-github-io-aycrazy.c9.io/index.html">Site</a>
+         <a href="https://andrew-yaspan-aycrazy.c9.io/">Site</a>
       </div>
       
     </nav>
