--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
       </div>
       
       <div>
-         <a href="https://andrew-yaspan-aycrazy.c9.io/">Site</a>
+         <a href="http://aycrazy.github.io/andrewyaspan.github.io/">Site</a>
       </div>
       
     </nav>
